CodeJB/log/err2.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./eff_cc.so
Warning in cling::IncrementalParser::CheckABICompatibility():
  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'
  Extraction of runtime standard library version was: '20191114'
In file included from input_line_12:9:
././eff.cc:654:67: error: expected ';' at end of declaration
    double r_origin = sqrt( pow(x_origin, 2.) + pow(y_origin ,2.))
                                                                  ^
                                                                  ;
Error in <ACLiC>: Dictionary generation failed!
